--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "mocha"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "slash": "^1.0.0"
+  }
 }
