--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.1.2",
+    "commander": "^2.12.2",
     "mocha": "^4.0.1",
     "slash": "^1.0.0"
   }
