--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Convert paths used in babel-plugin-root-import to relative ones",
   "main": "index.js",
+  "bin": {
+    "convert-root-import": "bin/index.js"
+  },
   "scripts": {
     "test": "mocha"
   },
